tests-integration/tests/roundtrip/invalid/semantic_errors/undeclared_idenfitier/undeclared_identifier.essence
find x : int(1..n)
such that x > 5
